--- a/app/views/artworks/search.html.erb
+++ b/app/views/artworks/search.html.erb
@@ -7,11 +7,11 @@
       <div class="">
         <div class="row">
           <div class="search-bar">
-            <form class="form-inline " action="/search" method="GET">
+            <form class="form-inline form-flex" action="/search" method="GET">
               <label class="sr-only" for="inlineFormInput">City</label>
-              <input name="city" type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="inlineFormInput" placeholder="Type a city" value='<%= params[:city] %>'>
+              <input name="city" type="text" class="form-control mb-2 mr-sm-2 mb-sm-0 city-flex" id="inlineFormInput" placeholder="Type a city" value='<%= params[:city] %>'>
               <label class="sr-only" for="inlineFormInputGroup">When</label>
-              <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+              <div class="input-group mb-2 mr-sm-2 mb-sm-0 date-flex">
                 <input name="date_range" type="text" class="form-control" id="dateRange" placeholder="When">
               </div>
               <input type="submit"  class="btn btn-primary" value="Search!">
@@ -22,33 +22,38 @@
           </div>
         </div>
         <div class="row scrollingContainer">
+
+        <% if @result == [] %>
+        <div class="text-center missing">
+        <%= image_tag "photo.jpg" %>
+        </div>
+        <h1 class="text-center">Hmmmm, I can't seem to find that right now.  Please try another search....</h1>
+
+        <% else %>
           <% @result.each do |artwork| %>
-            <div class="col-xs-12 col-md-6">
-              <% background_picture = cl_image_path(artwork.photo.path) || "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
-              <%= link_to artwork_path(artwork), class: "card-link" do %>
-                <div class="card">
-                <img class="card-img-top card-pic" src='<%= background_picture %>' alt="Card image cap">
-<div class="card-block">
-<h2 class="card-title "><%= artwork.title %></h2>
-<p class="card-text ">By <%= artwork.owner.username %></p>
-                  <div class="card-category"><%= artwork.category %></div>
-                  <div class="card-like"><i class="fa fa-heart" aria-hidden="true"></i>
-</div>
-
-<i class="fa fa-twitter card-social"></i>
-
-
-                  </div>
+          <div class="col-xs-12 col-md-6">
+            <% background_picture = cl_image_path(artwork.photo.path) || "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
+            <%= link_to artwork_path(artwork), class: "card-link" do %>
+            <div class="card">
+              <img class="card-img-top card-pic" src='<%= background_picture %>' alt="Card image cap">
+              <div class="card-block">
+                <h2 class="card-title "><%= artwork.title %></h2>
+                <p class="card-text ">By <%= artwork.owner.username %></p>
+                <div class="card-category"><%= artwork.category %></div>
+                <div class="card-like"><i class="fa fa-heart" aria-hidden="true"></i>
                 </div>
-
-              <% end %>
+                <i class="fa fa-twitter card-social"></i>
+              </div>
             </div>
+            <% end %>
+          </div>
+          <% end %>
           <% end %>
         </div>
       </div>
     </div>
     <div class="col-md-4 fixed-map">
-    <div id="map" style="width: 100%; height: 915px; "></div>
+      <div id="map" style="width: 100%; height: 915px; "></div>
       <% content_for(:after_js) do %>
       <%= javascript_tag do %>
       $(document).ready(function() {
