--- a/app/views/artworks/search.html.erb
+++ b/app/views/artworks/search.html.erb
@@ -2,6 +2,7 @@
 <!-- filter bar container -->
 <!-- content container -->
 <div class="container-fluid">
+  <div class="wrapper">
   <div class="">
     <div class="col-xs-12 col-md-8 ">
       <div class="">
@@ -71,6 +72,7 @@
 });
 <% end %>
 <% end %>
+</div>
 </div>
 </div>
 </div>
