--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,3 +6,17 @@
 
 //   background-attachment: fixed;
 // }
+
+.header-titles-left {
+  text-align: left;
+}
+
+.wrapper {
+  width: 1000px;
+  margin: 0 auto;
+}
+
+.no-margin {
+  margin-left: 0;
+   margin-right: 0;
+}
