--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,7 +1,7 @@
 #footer {
-  background: #848484;
+  background: #f2f2f2;
   padding: 30px 0;
-  color: #CCCCCC;
+  color: #848484;
 }
 #footer p {
   margin-top: 17px;
