--- a/app/assets/stylesheets/slick/_slick.scss
+++ b/app/assets/stylesheets/slick/_slick.scss
@@ -14,6 +14,11 @@
     touch-action: pan-y;
     -webkit-tap-highlight-color: transparent;
 }
+
+.slick-slide img {
+    margin: 0 auto;
+}
+
 .slick-list {
     position: relative;
     overflow: hidden;
