--- a/app/views/artworks/_form.html.erb
+++ b/app/views/artworks/_form.html.erb
@@ -2,10 +2,14 @@
   <%= f.input :title %>
   <%= f.input :category %>
   <%= f.input :location %>
-  <%= f.input :height %>
-  <%= f.input :width %>
-  <%= f.input :depth %>
-  <%= f.input :weight %>
+  <%= f.input :height, as: :integer %>
+  <%= f.input :width, as: :integer  %>
+  <%= f.input :depth, as: :integer  %>
+  <%= f.input :weight, as: :integer  %>
   <%= f.input :photo, as: :attachinary %>
-  <%= f.button :submit %>
+  <div class="text-center">
+  <br>
+  <%= f.button :submit, class: "btn btn-primary" %>
+  <br>
+  </div>
 <% end %>
