--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -125,7 +125,7 @@ position: absolute;
 .scrollingContainer {
     margin-top: 30px;
     overflow: scroll;
-    height: 800px;
+    height: 75vh;
     background-color: white;
 }
 
