--- a/app/views/artworks/search.html.erb
+++ b/app/views/artworks/search.html.erb
@@ -54,7 +54,7 @@
       </div>
     </div>
     <div class="col-md-4 fixed-map">
-      <div id="map" style="width: 100%; height: 915px; "></div>
+      <div id="map" style="width: 100%; height: 85vh; "></div>
       <% content_for(:after_js) do %>
       <%= javascript_tag do %>
       $(document).ready(function() {
