--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div>
-<div class="banner" style="background: linear-gradient(-30deg, rgba(0,101,168,0.4) 0%, rgba(0,36,61,0.4) 4%), url(https://static.pexels.com/photos/428111/pexels-photo-428111.jpeg);">
+<div class="banner" style="background: linear-gradient(-30deg, rgba(0,101,168,0.4) 0%, rgba(0,36,61,0.4) 4%), url('https://static.pexels.com/photos/428111/pexels-photo-428111.jpeg');">
   <h1 class="text-center">ARTIFY YOUR WORLD</h1>
   <br>
   <p class="text-center">Show artwork from local artists and experience your favorite art for<strong> FREE</strong></p>
@@ -30,9 +30,11 @@
 
 <div class="container whole-cards">
   <div class="browse text-center">
-  <%= link_to "Browse Our Artwork", artworks_path %></h2>
-  </div>
 
+
+  <%= link_to "Browse Our Catalogue of Over ", artworks_path %></h2><%= Artwork.count %> Pieces
+  </div>
+<%= raise %>
   <div class="row">
     <div class="col-md-4">
       <div class="homecard">
