--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -13,7 +13,7 @@
         <div class="row" >
           <div class="header-titles-left">
             <h1 style="margin: 0px;"><%= @artwork.title %>,</h1>
-            <h5>by <%= @artwork.owner.username.titleize %><%= @artwork.owner.fullname.titleize %></h5>
+            <h5>by <%= @artwork.owner.username %><%= @artwork.owner.fullname %></h5>
           </div>
         </div>
         <div class="row" >
