change in profile

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
 
 <div class="container whole-cards">
   <div class="browse text-center">
-  <%= link_to "Browse Our Artwork", artworks_path %></h2>
+  <%= link_to "Browse Our Artwork", artworks_path %>
   </div>
 
   <div class="row">
