--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -6,6 +6,12 @@
   width: 50px;
   border-radius: 50%;
 }
+
+.avatar-xl {
+  width: 100px;
+  border-radius: 50%;
+}
+
 .avatar-bordered {
   width: 30px;
   border-radius: 50%;
