--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,230 +1,250 @@
-<h1 class="text-center">My Profile</h1>
-<div class="profile-header-wrapper">
-  <div class="container profile-header-container text-center">
-    <div class="profile-header-infos">
-      <img src="images/papillard.jpeg" alt="">
-      <h1>
-        <% if current_user.username.nil? %>
-        <%= current_user.first_name %>
-        <%= current_user.last_name %>
-        <% else %>
-        <%= current_user.username %>
-        <% end %>
-      </h1>
-      <p>
-        <%= current_user.email %>
-        <br>
-        <%= current_user.phone_number %>
-        <br>
-      </p>
-    </div>
-    <div class="tabs">
-      <a class="tab active" data-target="#request">
-        <h3>My requests</h3>
-      </a>
-      <a class="tab" data-target="#venue">
-        <h3>My Venues</h3>
-      </a>
-      <a class="tab" data-target="#artwork">
-        <h3>My artworks</h3>
-      </a>
-      <a class="tab" data-target="#requestout">
-        <h3>People requests</h3>
-      </a>
-    </div>
-  </div>
+<div class="banner-profile" style="background-image: linear-gradient(-30deg, rgba(0,101,168,0.4) 0%, rgba(0,36,61,0.4) 4%), url(https://static.pexels.com/photos/428111/pexels-photo-428111.jpeg);">
 </div>
-<div class="container text-center">
-  <div class="tab-content" id="request" style="height: 250px; overflow:auto;">
-    <% current_user.venues.each do |venue| %>
-    <% venue.appointments.each do |appointment| %>
-    <ul>
-      <li>
-        <h4>
-          <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
-          <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
-          by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
-          by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
-          <% else %>
-          by <%= Artwork.find(appointment.artwork_id).owner.username%>
-          <% end %>
-          (<%= appointment.artwork.category %>)
-          <br>
-          Status: <%= appointment.status %>
-          <br>
-        </h4>
-        For your: <%= appointment.venue_id%>
-        <br>
-        From <%= appointment.start_date %>
-        to <%= appointment.end_date %>
-        <br>
-        Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
-        <br>
-        <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
-        <% else %>
-        Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
-        <% end %>
-        <br>
-      </li>
-    </ul>
-    <% end %>
-    <% end %>
-    <!-- JOE STATUS  -->
-     <% current_user.venues.each do |venue| %>
-    <li><%= link_to venue.title, venue_path(venue.id), style: 'text-decoration: none; color:black;'  %></li>
-    ###########Confirmed Bookings####################
-    <% current_user.venues.each do |venue| %>
-    <% status = venue.appointments.where(status: "Confirmed") %>
-    <% status.each do |appointment| %>
-    <ul>
-      <li>
-        <h4>
-          <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
-          <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
-          by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
-          by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
-          <% else %>
-          by <%= Artwork.find(appointment.artwork_id).owner.username%>
-          <% end %>
-          (<%= appointment.artwork.category %>)
-          <br>
-          Status: <%= appointment.status %>
-          <br>
-        </h4>
-        For your: <%= appointment.venue.title %>
-        <br>
-        From <%= appointment.start_date %>
-        to <%= appointment.end_date %>
-        <br>
-        Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
-        <br>
-        <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
-        <% else %>
-        Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
-        <% end %>
-        <br>
-      </li>
-    </ul>
-    <% end %>
-    <% end %>
-    ###############################
-    ###########Declined Bookings####################
-    <% current_user.venues.each do |venue| %>
-    <% status = venue.appointments.where(status: "Declined") %>
-    <% status.each do |appointment| %>
-    <ul>
-      <li>
-        <h4>
-          <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
-          <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
-          by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
-          by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
-          <% else %>
-          by <%= Artwork.find(appointment.artwork_id).owner.username%>
-          <% end %>
-          (<%= appointment.artwork.category %>)
-          <br>
-          Status: <%= appointment.status %>
-          <br>
-        </h4>
-        For your: <%= appointment.venue.title %>
-        <br>
-        From <%= appointment.start_date %>
-        to <%= appointment.end_date %>
-        <br>
-        Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
-        <br>
-        <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
-        <% else %>
-        Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
-        <% end %>
-        <br>
-        <%= link_to "Delete", appointment_path(appointment), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
-      </li>
-    </ul>
-    <% end %>
-    <% end %>
-    ###############################
-    ###########Pending Apporval Bookings####################
-    <% current_user.venues.each do |venue| %>
-    <% status = venue.appointments.where(status: "Pending") %>
-    <% status.each do |appointment| %>
-    <ul>
-      <li>
-        <h4>
-          <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
-          <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
-          by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
-          by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
-          <% else %>
-          by <%= Artwork.find(appointment.artwork_id).owner.username%>
-          <% end %>
-          (<%= appointment.artwork.category %>)
-          <br>
-          Status: <%= appointment.status %>
-          <br>
-        </h4>
-        For your: <%= appointment.venue.title %>
-        <br>
-        From <%= appointment.start_date %>
-        to <%= appointment.end_date %>
-        <br>
-        Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
-        <br>
-        <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
-        <% else %>
-        Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
-        <% end %>
-        <br>
-      </li>
-    </ul>
-    <% end %>
-    <% end %>
-<% end %>
-    <!-- END JOE STATUS  -->
+
+<div class="user-profile-info">
+  <div class= "user-profile-picture">
+    <% avatar_url = current_user.facebook_picture_url || image_path('placeholder-guy.png') %>
+    <%= image_tag avatar_url, class: "avatar-xl" %>
   </div>
-  <div class="tab-content hidden" id="venue" style="height: 250px; overflow:auto;">
-    <p>
-      <% current_user.venues.each do |venue| %>
-      <li><%= link_to venue.title, venue_path(venue.id), style: 'text-decoration: none; color:black;'  %></li>
+
+  <div class="user-profile-details">
+    <h1>
+      <% if current_user.username.nil? %>
+      <%= current_user.first_name %>
+      <%= current_user.last_name %>
+      <% else %>
+      <%= current_user.username %>
       <% end %>
-    </ul>
-    <%= link_to "Create Venues", new_venue_path, style: 'text-decoration: none; color:black;' %>
-  </p>
+    </h1>
+    <p>
+      <%= current_user.email %>
+    </p>
+    <p>
+      <%= current_user.phone_number %>
+    </p>
+  </div>
 </div>
-<div class="tab-content hidden" id="artwork" style="height: 250px; overflow:auto;">
-  <% current_user.artworks.each do |art| %>
-  <ul>
-    <li>
-      <h4><%= link_to art.title, artwork_path(art.id), style: 'text-decoration: none; color:black;' %></h4>
-    </li>
-  </ul>
-  <% end %>
-  <%= link_to "Create an Artwork", new_artwork_path, style: 'text-decoration: none; color:black;' %>
-</div>
-<div class="tab-content hidden" id="requestout" style="height: 250px; overflow:auto;">
-<%  current_user.artworks.each do |artwork|  %>
-<% artwork.appointments.each do |appointment| %>
-<ul>
-  <li>
-    <% if appointment.venue.employees.first.username.nil? %>
-    <%= appointment.venue.employees.first.first_name %>
-    <%= appointment.venue.employees.first.last_name %>
-    <% else %>
-    <%= appointment.venue.employees.first.username %>
+
+
+<div class="container table-information text-center">
+  <div class="tabs profile-title">
+    <a class="tab active" data-target="#request">
+      <h3>My requests</h3>
+    </a>
+    <a class="tab" data-target="#venue">
+      <h3>My Venues</h3>
+    </a>
+    <a class="tab" data-target="#artwork">
+      <h3>My artworks</h3>
+    </a>
+    <a class="tab" data-target="#requestout">
+      <h3>People requests</h3>
+    </a>
+  </div>
+
+
+
+
+  <div class="tab-content" id="request" style="min-height: 250px; overflow:auto;">
+
+    <div class="row">
+      <div class="col-md-4">
+        Pending Apporval Bookings
+        <% current_user.venues.each do |venue| %>
+        <% status = venue.appointments.where(status: "Pending") %>
+        <% status.each do |appointment| %>
+        <ul>
+          <li>
+            <h4>
+              <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
+              <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
+              by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
+              by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
+              <% else %>
+              by <%= Artwork.find(appointment.artwork_id).owner.username%>
+              <% end %>
+              (<%= appointment.artwork.category %>)
+              <br>
+              Status: <%= appointment.status %>
+              <br>
+            </h4>
+            For your: <%= appointment.venue.title %>
+            <br>
+            From <%= appointment.start_date %>
+            to <%= appointment.end_date %>
+            <br>
+            Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
+            <br>
+            <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
+            <% else %>
+            Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
+            <% end %>
+            <br>
+          </li>
+        </ul>
+        <% end %>
+        <% end %>
+      </div>
+
+      <div class="col-md-4">
+        <% current_user.venues.each do |venue| %>
+        <%= link_to venue.title, venue_path(venue.id), style: 'text-decoration: none; color:black;'  %>
+        <% status = venue.appointments.where(status: "Confirmed") %>
+        <% status.each do |appointment| %>
+        <ul>
+          <li>
+            <h4>
+              <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
+              <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
+              by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
+              by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
+              <% else %>
+              by <%= Artwork.find(appointment.artwork_id).owner.username%>
+              <% end %>
+              (<%= appointment.artwork.category %>)
+              <br>
+              Status: <%= appointment.status %>
+              <br>
+            </h4>
+            For your: <%= appointment.venue.title %>
+            <br>
+            From <%= appointment.start_date %>
+            to <%= appointment.end_date %>
+            <br>
+            Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
+            <br>
+            <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
+            <% else %>
+            Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
+            <% end %>
+            <br>
+          </li>
+        </ul>
+        <% end %>
+        <% end %>
+      </div>
+
+
+
+      <div class="col-md-4">
+        <% current_user.venues.each do |venue| %>
+        <% status = venue.appointments.where(status: "Declined") %>
+        <% status.each do |appointment| %>
+        <ul>
+          <li>
+            <h4>
+              <%= link_to appointment.artwork.title, artwork_path(appointment.artwork_id), style: 'text-decoration: none; color:black;' %>,
+              <% if Artwork.find(appointment.artwork_id).owner.username.nil? %>
+              by <%= Artwork.find(appointment.artwork_id).owner.first_name%>
+              by <%= Artwork.find(appointment.artwork_id).owner.last_name%>
+              <% else %>
+              by <%= Artwork.find(appointment.artwork_id).owner.username%>
+              <% end %>
+              (<%= appointment.artwork.category %>)
+              <br>
+              Status: <%= appointment.status %>
+              <br>
+            </h4>
+            For your: <%= appointment.venue.title %>
+            <br>
+            From <%= appointment.start_date %>
+            to <%= appointment.end_date %>
+            <br>
+            Email: <%= Artwork.find(appointment.artwork_id).owner.email%>
+            <br>
+            <% if Artwork.find(appointment.artwork_id).owner.email.nil? %>
+            <% else %>
+            Phone number: <%= Artwork.find(appointment.artwork_id).owner.phone_number%>
+            <% end %>
+            <br>
+            <%= link_to "Delete", appointment_path(appointment), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-book-show" %>
+          </li>
+        </ul>
+        <% end %>
+        <% end %>
+      </div>
+    </div>
+
+
+
+
+
+
+  </div>
+
+
+
+
+
+
+
+  <div class="tab-content hidden" id="venue" style="min-height: 250px; overflow:auto;">
+
+    <% current_user.venues.each do |venue| %>
+    <div class="row">
+      <div class="col-md-6 user-profile-info">
+        <p>My Venues :</p>
+        <p><%= link_to venue.title, venue_path(venue.id), style: 'text-decoration: none; color:black;'  %></p>
+
+        <% end %>
+      </div>
+      <div class="col-md-6">
+        <p><%= link_to "Create Venues", new_venue_path, style: 'text-decoration: none; color:black;' %></p>
+      </div>
+    </div>
+
+
+  </div>
+
+
+
+
+
+
+
+
+
+
+  <div class="tab-content hidden" id="artwork" style="min-height: 250px; overflow:auto;">
+    <% current_user.artworks.each do |art| %>
+    <h4><%= link_to art.title, artwork_path(art.id), style: 'text-decoration: none; color:black;' %></h4>
     <% end %>
-    requested "<%= appointment.artwork.title %>"
-    for <%= link_to appointment.venue.title,  venue_path(appointment.venue.id), style: 'text-decoration: none; color:black;'  %> <br>
-    From <%= appointment.start_date%> to <%= appointment.end_date %>
-    <br>
-    <br>
-    <%= link_to 'Confirm',  appointment_confirm_path(appointment), class: "btn btn-success" %>
-    <%= link_to 'Decline',  appointment_decline_path(appointment), class: "btn btn-danger" %>
-    <br>
-    <br>
-  </li>
-</ul>
-<% end %>
-<% end %>
-</div>
+
+    <%= link_to "Create an Artwork", new_artwork_path, style: 'text-decoration: none; color:black;' %>
+  </div>
+
+
+
+
+
+
+
+
+  <div class="tab-content hidden" id="requestout" style="min-height: 250px; overflow:auto;">
+    <%  current_user.artworks.each do |artwork|  %>
+    <% artwork.appointments.each do |appointment| %>
+    <li>
+      <% if appointment.venue.employees.first.username.nil? %>
+      <%= appointment.venue.employees.first.first_name %>
+      <%= appointment.venue.employees.first.last_name %>
+      <% else %>
+      <%= appointment.venue.employees.first.username %>
+      <% end %>
+      requested "<%= appointment.artwork.title %>"
+      for <%= link_to appointment.venue.title,  venue_path(appointment.venue.id), style: 'text-decoration: none; color:black;'  %> <br>
+      From <%= appointment.start_date%> to <%= appointment.end_date %>
+      <br>
+      <br>
+      <%= link_to 'Confirm',  appointment_confirm_path(appointment), class: "btn btn-success" %>
+      <%= link_to 'Decline',  appointment_decline_path(appointment), class: "btn btn-danger" %>
+      <br>
+      <br>
+    </li>
+    <% end %>
+    <% end %>
+  </div>
+
+
+
+
 </div>
