--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
-  background-size: cover;
-  height: 88vh;
+  background-size: 100%;
+  height: 100vh;
   margin-left: 20px;
   margin-right: 20px;
   margin-right: 20px;
@@ -41,4 +41,22 @@
 
 .banner-artwork{
   height: 320px;
+}
+
+.title-text{
+  font-size: 35px;
+  font-weight: heavy;
+  display: flex;
+padding-left: 125px;
+
+}
+.title-vp{
+  display: flex;
+padding-left: 63px;
+
+}
+.title-search{
+  display: flex;
+padding-left: 93px;
+
 }
