--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,9 +1,9 @@
 .banner {
   background-size: cover;
-  height: 88vh;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-right: 20px;
+  min-height: 400px;
+  padding-bottom: 60px;
+  //margin-left: 20px;
+  //margin-right: 20px;
   display: block;
 }
 
