--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,9 @@
+.full-width {
+  width: 100%;
+  height: auto;
+  display: inline-block;
+}
+
 .card {
 
   height: 320px;
@@ -131,6 +137,7 @@ position: absolute;
 
 .card-pic{
   width: 100%;
+  height: 70%;
   border-radius: 4px;
 
 }
@@ -154,7 +161,12 @@ position: absolute;
 }
 
 .wrapper {
-
-  width: 1200px;
+  width: 80%;
   margin: 0 auto;
+}
+
+.card-image {
+  height: 60%;
+  width: 90%;
+  border-radius: 4px;
 }
