--- a/app/views/artworks/search.html.erb
+++ b/app/views/artworks/search.html.erb
@@ -2,9 +2,9 @@
 <!-- filter bar container -->
 <!-- content container -->
 <div class="container-fluid">
-  <div class="wrapper">
   <div class="">
-    <div class="col-xs-12 col-md-8 ">
+  <div class="">
+    <div class="col-xs-12 col-md-6 ">
       <div class="">
         <div class="row">
           <div class="search-bar">
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 fixed-map">
+    <div class="col-md-6 fixed-map">
       <div id="map" style="width: 100%; height: 85vh; "></div>
       <% content_for(:after_js) do %>
       <%= javascript_tag do %>
