--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="row">
+  <div class="wrapper">
+  <div class="">
 
     <div class="col-md-6">
-      <h1>Signing up is </h1>
-      <h1>as easy as a brushstroke</h1>
+      <h1>Signing up is as easy as a brushstroke</h1>
       <br>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
@@ -27,8 +27,9 @@
       </div>
 
     <div class="col-md-6">
-      <%= image_tag "image.png", style: 'width: 600px; height: auto;'%>
+      <%= image_tag "image.png", style: 'width: 100%; height: auto;'%>
     </div>
 
+  </div>
   </div>
 </div>
