final before push

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -16,7 +16,7 @@
   text-shadow: 0px 1px rgba(0, 0, 0, 0.6);
   margin: 0px;
   padding-top: 189px;
-  color: white;
+  color: black;
   font-weight: bold;
 }
 
@@ -27,7 +27,7 @@
 .banner p {
   font-size: 25px;
   font-weight: lighter;
-  color: rgba(255, 255, 255, 1);
+  color: gray;
   margin-bottom: 50px;
 }
 
@@ -44,6 +44,7 @@
 }
 
 .title-text{
+  color: black;
   font-size: 35px;
   font-weight: heavy;
   display: flex;
@@ -51,6 +52,7 @@ padding-left: 125px;
 
 }
 .title-vp{
+  color: gray;
   display: flex;
 padding-left: 63px;
 
