--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,6 @@
 .card {
 
-  height: 320px;
+  height: 100%;
   width: 500rm;
 
   background-size: cover !important;
@@ -9,6 +9,17 @@
   padding-bottom: 20px;
   margin-bottom: 20px;
   border-radius: 6px;
+
+}
+.card-title{
+  font-size: 20px;
+  padding-left: 10px;
+
+}
+.card-name{
+  font-size: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
 
 }
 .card-user {
@@ -23,6 +34,10 @@
   font-size: 10px;
   text-transform: uppercase;
   color: white;
+}
+.card-block {
+  display: flex;
+  justify-content: space-between;
 }
 
 .card-like {
@@ -125,7 +140,7 @@ position: absolute;
 .scrollingContainer {
     margin-top: 30px;
     overflow: scroll;
-    height: 75vh;
+    height: 76vh;
     background-color: white;
 }
 
