--- a/app/views/artworks/search.html.erb
+++ b/app/views/artworks/search.html.erb
@@ -3,72 +3,74 @@
 <!-- content container -->
 <div class="container-fluid">
   <div class="wrapper">
-  <div class="">
-    <div class="col-xs-12 col-md-8 ">
-      <div class="">
-        <div class="row">
-          <div class="search-bar">
-            <form class="form-inline form-flex" action="/search" method="GET">
-              <label class="sr-only" for="inlineFormInput">City</label>
-              <input name="city" type="text" class="form-control mb-2 mr-sm-2 mb-sm-0 city-flex" id="inlineFormInput" placeholder="Type a city" value='<%= params[:city] %>'>
-              <label class="sr-only" for="inlineFormInputGroup">When</label>
-              <div class="input-group mb-2 mr-sm-2 mb-sm-0 date-flex">
-                <input name="date_range" type="text" class="form-control" id="dateRange" placeholder="When">
-              </div>
-              <input type="submit"  class="btn btn-primary" value="Search!">
-              <div class="row search-row">
-                <input type="hidden" class="filtr-search" name="filtr-search" data-search placeholder="Enter A City" value='<%= params[:city] %>'>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="row scrollingContainer">
-
-        <% if @result == [] %>
-        <div class="text-center missing">
-        <%= image_tag "photo.jpg" %>
-        </div>
-        <h1 class="text-center">Hmmmm, I can't seem to find that right now.  Please try another search....</h1>
-
-        <% else %>
-          <% @result.each do |artwork| %>
-          <div class="col-xs-12 col-md-6">
-            <% background_picture = cl_image_path(artwork.photo.path) || "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
-            <%= link_to artwork_path(artwork), class: "card-link" do %>
-            <div class="card">
-              <img class="card-img-top card-pic" src='<%= background_picture %>' alt="Card image cap">
-              <div class="card-block">
-                <h2 class="card-title "><%= artwork.title %></h2>
-                <p class="card-text ">By <%= artwork.owner.username %></p>
-                <div class="card-category"><%= artwork.category %></div>
-                <div class="card-like"><i class="fa fa-heart" aria-hidden="true"></i>
+    <div class="">
+      <div class="col-xs-12 col-md-8 ">
+        <div class="">
+          <div class="row">
+            <div class="search-bar">
+              <form class="form-inline form-flex" action="/search" method="GET">
+                <label class="sr-only" for="inlineFormInput">City</label>
+                <input name="city" type="text" class="form-control mb-2 mr-sm-2 mb-sm-0 city-flex" id="inlineFormInput" placeholder="Type a city" value='<%= params[:city] %>'>
+                <label class="sr-only" for="inlineFormInputGroup">When</label>
+                <div class="input-group mb-2 mr-sm-2 mb-sm-0 date-flex">
+                  <input name="date_range" type="text" class="form-control" id="dateRange" placeholder="When">
                 </div>
-                <i class="fa fa-twitter card-social"></i>
+                <input type="submit"  class="btn btn-primary" value="Search!">
+                <div class="row search-row">
+                  <input type="hidden" class="filtr-search" name="filtr-search" data-search placeholder="Enter A City" value='<%= params[:city] %>'>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="row scrollingContainer">
+
+            <% if @result == [] %>
+            <div class="text-center missing">
+              <%= image_tag "photo.jpg" %>
+            </div>
+            <h1 class="text-center">Hmmmm, I can't seem to find that right now.  Please try another search....</h1>
+
+            <% else %>
+            <% @result.each do |artwork| %>
+            <div class="col-xs-12 col-md-6">
+              <% background_picture = cl_image_path(artwork.photo.path, width: 300, height: 200, crop: :fill) || "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
+              <%= link_to artwork_path(artwork), class: "card-link" do %>
+              <div class="card">
+                <img class="card-img-top card-pic" src='<%= background_picture %>' alt="Card image cap">
+                <div class="card-block">
+                  <p class="card-title"><%= artwork.title %></p>
+                  <p class="card-name ">       By <%= artwork.owner.username %></p>
+
+                  <div class="card-category"><%= artwork.category %></div>
+
+                  <!-- <div class="card-like"><i class="fa fa-heart" aria-hidden="true"></i> -->
+                  <!-- </div> -->
+                  <!-- <i class="fa fa-twitter card-social"></i> -->
+                </div>
               </div>
+              <% end %>
             </div>
             <% end %>
+            <% end %>
           </div>
-          <% end %>
-          <% end %>
         </div>
       </div>
-    </div>
-    <div class="col-md-4 fixed-map">
-      <div id="map" style="width: 100%; height: 85vh; "></div>
-      <% content_for(:after_js) do %>
-      <%= javascript_tag do %>
-      $(document).ready(function() {
-      var handler = Gmaps.build('Google');
-      handler.buildMap({ internal: { id: 'map' } }, function() {
-      markers = handler.addMarkers(<%= raw @hash.to_json %>);
-      handler.bounds.extendWith(markers);
-      handler.fitMapToBounds();
-      if (markers.length == 0) {
-      handler.getMap().setZoom(2);
-    } else if (markers.length == 1) {
-    handler.getMap().setZoom(14);
-  }
-});
+      <div class="col-md-4 fixed-map">
+        <div id="map" style="width: 100%; height: 82vh; "></div>
+        <% content_for(:after_js) do %>
+        <%= javascript_tag do %>
+        $(document).ready(function() {
+        var handler = Gmaps.build('Google');
+        handler.buildMap({ internal: { id: 'map' } }, function() {
+        markers = handler.addMarkers(<%= raw @hash.to_json %>);
+        handler.bounds.extendWith(markers);
+        handler.fitMapToBounds();
+        if (markers.length == 0) {
+        handler.getMap().setZoom(2);
+      } else if (markers.length == 1) {
+      handler.getMap().setZoom(14);
+    }
+  });
 });
 <% end %>
 <% end %>
