--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <div>
-<div class="banner" style="background: linear-gradient(-30deg, rgba(0,101,168,0.4) 0%, rgba(0,36,61,0.4) 4%), url(assets/Background.png);">
+<div class="banner" style="background:  url(assets/Background.png);">
   <h1 class="text-center title-text">ARTIFY <br> YOUR <br> WORLD</h1>
   <br>
   <br>
