--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,9 +1,7 @@
 .banner {
-  background-size: 100%;
-  height: 100vh;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-right: 20px;
+  background-size: cover;
+  min-height: 400px;
+  padding-bottom: 60px;
   display: block;
 }
 
