--- a/app/views/artworks/search.html.erb
+++ b/app/views/artworks/search.html.erb
@@ -2,7 +2,7 @@
 <!-- filter bar container -->
 <!-- content container -->
 <div class="container-fluid">
-
+<div class="wrapper">
   <div class="">
   <div class="">
     <div class="col-xs-12 col-md-6 ">
@@ -58,7 +58,7 @@
 
     </div>
     <div class="col-md-6 fixed-map">
-      <div id="map" style="width: 100%; height: 85vh; "></div>
+      <div id="map" style="width: 100%; height: 83vh; padding-left: 5px;"></div>
       <% content_for(:after_js) do %>
       <%= javascript_tag do %>
       $(document).ready(function() {
@@ -81,5 +81,5 @@
 </div>
 </div>
 
-
+</div>
 
