--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,9 @@
 
 <div>
 <div class="banner" style="background:  url(assets/Background.png);">
-  <h1 class="text-center title-text">ARTIFY <br> YOUR <br> WORLD</h1>
+  <h1 class="text-center title-text">ARTIFY </h1>
+  <h1 class="text-center title-text">YOUR</h1>
+  <h1 class="text-center title-text">WORLD</h1>
   <br>
   <br>
   <p class="text-center title-vp">Show artwork from local artists and </p> <p class="text-center title-vp">experience your favorite art for<strong> FREE</strong></p>
