aborting modified home page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -13,8 +13,8 @@
   font-size: 63px;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.6);
   margin: 0px;
-  padding-top: 189px;
-  color: black;
+  padding-top: 50px;
+  color: gray;
   font-weight: bold;
 }
 
@@ -26,7 +26,7 @@
   font-size: 25px;
   font-weight: lighter;
   color: gray;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 
 .search-bar {
@@ -47,17 +47,19 @@
   font-weight: heavy;
   display: flex;
 padding-left: 125px;
+padding-top: 20px;
 
 }
 .title-vp{
   color: gray;
   display: flex;
-padding-left: 63px;
+padding-left: 125px;
 
 }
 .title-search{
+  padding-top: 50px;
   display: flex;
-padding-left: 93px;
+padding-left: 160px;
 
 }
 
