--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,13 @@
 
 <div>
 <div class="banner" style="background:  url(assets/Background.png);">
-  <h1 class="text-center title-text">ARTIFY </h1>
-  <h1 class="text-center title-text">YOUR</h1>
-  <h1 class="text-center title-text">WORLD</h1>
+  <h1 class="text-left title-text">ARTIFY <br> YOUR <br> WORLD</h1>
+  <br><br><br>
   <br>
+  <p class="text-left title-vp">Show artwork from local artists and </p> <p class="text-center title-vp">experience your favorite art for <strong> FREE</strong></p>
   <br>
-  <p class="text-center title-vp">Show artwork from local artists and </p> <p class="text-center title-vp">experience your favorite art for<strong> FREE</strong></p>
-  <br>
-
-  <div class="text-center title-search">
+<br>
+  <div class="text-left title-search">
     <form class="form-inline" action="/search" method="GET">
       <label class="sr-only" for="inlineFormInput">City</label>
       <input name="city" type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="inlineFormInput" placeholder="Enter your city">
