--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -27,6 +27,8 @@
 
             <% @artwork.each do |artwork| %>
             <div class="col-xs-12 col-md-6">
+            <% if  artwork.photo.nil? %>
+            <% else %>
               <% background_picture = cl_image_path(artwork.photo.path, width: 300, height: 200, crop: :fill) || "https://unsplash.com/?photo=-LRuNvY8W7Q" %>
               <%= link_to artwork_path(artwork), class: "card-link" do %>
               <div class="card">
@@ -42,6 +44,7 @@
                   <!-- <i class="fa fa-twitter card-social"></i> -->
                 </div>
               </div>
+              <% end %>
               <% end %>
             </div>
             <% end %>
