change in history

--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -127,12 +127,16 @@
 <% end %>
 </div>
 <div class="tab-content hidden" id="history" style="height: 250px; overflow:auto;">
-  <div class="content" >
+<div class="content" >
+  <%if @appt.nil?  %>
+    <h2>This has not been booked yet!!!</h2>
+  <% else %>
     <% @appt = Appointment.where(artwork_id: @artwork) %>
     <h2>Number of Historical Requests: <%=  @appt.count%></h2>
     <ul>
       <li>Booked by  <%= @appt.last.venue.title   %>, in <%= @appt.last.venue.location  %> from: <%=  @appt.last.start_date %> to <%= @appt.last.end_date %> </li>
     </ul>
+    <% end %>
   </div>
 </div>
 </div>
