home page modifications to throw outand db migration

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -56,7 +56,7 @@
           <div class="content">
 
             <!--  -->
-
+<%= raise %>
             <h1>JOE STATUS</h1>
 
             <%# current_user.venues.each do |venue| %>
