--- a/app/views/artworks/_form.html.erb
+++ b/app/views/artworks/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for @artwork do |f| %>
   <%= f.input :title %>
+  <%= f.input :description %>
   <%= f.input :category %>
   <%= f.input :location %>
   <%= f.input :height, as: :integer %>
