--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -87,14 +87,11 @@
               </div>
             </div>
             <h3>
-              Title jrqiogj
+              <%=  @artwork.title%>
             </h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio quo soluta incidunt iste nam? Nobis aliquid quam adipisci, ducimus, alias quo inventore vitae nam a
-              <br><br>
-              voluptates autem minus odio non quos quaerat nisi hic repudiandae odit ad similique asperiores, eius quisquam ea quas amet? Beatae impedit eaque facilis dolore vero consectetur voluptatibus velit veniam qui, asperiores sapiente voluptatem sed, repellat libero neque magni, delectus maiores at hic,
-              <br><br>
-              architecto laborum tempore! Repudiandae ut earum enim praesentium. Voluptates alias quos perferendis ducimus, laboriosam omnis fuga dolore ut voluptas? Blanditiis est nulla adipisci odio tempore excepturi cum asperiores eveniet corporis. A, fugit, optio.
+              <%=  @artwork.description%>
+
             </p>
           </div>
 
@@ -127,16 +124,15 @@
 </div>
 <div class="tab-content hidden" id="history" style="height: 250px; overflow:auto;">
   <div class="content" >
-    <h3>
-      Title jrqiogj
-    </h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio quo soluta incidunt iste nam? Nobis aliquid quam adipisci, ducimus, alias quo inventore vitae nam a
-      <br><br>
-      voluptates autem minus odio non quos quaerat nisi hic repudiandae odit ad similique asperiores, eius quisquam ea quas amet? Beatae impedit eaque facilis dolore vero consectetur voluptatibus velit veniam qui, asperiores sapiente voluptatem sed, repellat libero neque magni, delectus maiores at hic,
-      <br><br>
-      architecto laborum tempore! Repudiandae ut earum enim praesentium. Voluptates alias quos perferendis ducimus, laboriosam omnis fuga dolore ut voluptas? Blanditiis est nulla adipisci odio tempore excepturi cum asperiores eveniet corporis. A, fugit, optio.
-    </p>
+  <%if @appt.nil?  %>
+  This has not been booked yet!!!
+  <% else %>
+    <% @appt = Appointment.where(artwork_id: @artwork) %>
+    <h2>Number of Historical Requests: <%=  @appt.count%></h2>
+    <ul>
+      <li>Booked by  <%= @appt.last.venue.title   %>, in <%= @appt.last.venue.location  %> from: <%=  @appt.last.start_date %> to <%= @appt.last.end_date %> </li>
+    </ul>
+    <% end %>
   </div>
 </div>
 </div>
@@ -147,32 +143,32 @@
       <h3>Explore more artwork from <%= @artwork.owner.username%></h3>
       <br>
     </div>
-    </div>
+  </div>
 
-    <div class="">
-      <div class="col-md-12">
-        <div class="inline-block-center">
-          <div class="multiple-items">
-            <% artist = @artwork.owner %>
-            <% art = Artwork.all %>
-            <% collection = art.where(user_id: artist) %>
-            <% collection.each do |piece| %>
-              <% if piece.photo.nil? %>
-              <% else %>
-                <% picture = piece.photo.path %>
-                <div class="card-link card-pic">
-                <%= link_to artwork_path(piece) do %>
-                  <div class="card-wrapper">
-                    <p class="card-text text-center"><%= piece.title %></p>
-                    <img class="card-image text-center" src="<%= cl_image_path(picture, width: 300, crop: "scale") %>" alt="sample image">
-                  </div>
-                <% end %>
-                </div>
-              <% end %>
+  <div class="">
+    <div class="col-md-12">
+      <div class="inline-block-center">
+        <div class="multiple-items">
+          <% artist = @artwork.owner %>
+          <% art = Artwork.all %>
+          <% collection = art.where(user_id: artist) %>
+          <% collection.each do |piece| %>
+          <% if piece.photo.nil? %>
+          <% else %>
+          <% picture = piece.photo.path %>
+          <div class="card-link card-pic">
+            <%= link_to artwork_path(piece) do %>
+            <div class="card-wrapper">
+              <p class="card-text text-center"><%= piece.title %></p>
+              <img class="card-image text-center" src="<%= cl_image_path(picture, width: 300, crop: "scale") %>" alt="sample image">
+            </div>
             <% end %>
           </div>
+          <% end %>
+          <% end %>
         </div>
       </div>
+    </div>
 
 <!--     <div class="">
       <div class="col-md-12">
